	PR gas/14987 	* gas/arm/neon-ldst-es.s: Add whitespace test. 	* gas/arm/neon-ldst-es.d: Update expected disassembly.

* config/tc-arm.c (parse_address_main): Skip whitespace before a
	closing bracket.